--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -138,6 +138,8 @@
 }
 
 .education-item, .work-item {
+  z-index: 1;
+
   &:first-child {
     padding-top: 2rem;
     margin-top: .5rem;
@@ -153,12 +155,13 @@
     height: 1.2rem;
     margin-right: 3rem;
     border: 2px solid $color-primary;
-    background-color: $color-primary;
+    background-color: $color-white;
     border-radius: 50%;
     float: left;
 
     &::after {
       position: absolute;
+      z-index: -1;
       content: '';
       width: 0;
       border: 1px solid $color-primary;
